--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -459,11 +459,11 @@
                 </div class="d-flex flex-wrap  ">
                 <div class="card__particulares-text d-flex flex-column ">
                     <h3 class="card__title">Enlazar Plus</h3>
-                    <p class="contenido__card">· Acceso a todos los cursos y capacitaciones.
-                        · Material de estudio exclusivo en PDF descargable.
-                        · Ejercicios y desafíos.
-                        · Certificado de asistencia.
-                        · Espacio de consultas con profesionales.
+                    <p class="contenido__card">· Acceso a todos los cursos y capacitaciones. <br>
+                        · Material de estudio exclusivo en PDF descargable. <br>
+                        · Ejercicios y desafíos. <br>
+                        · Certificado de asistencia. <br>
+                        · Espacio de consultas con profesionales. <br>
                         · Posibilidad de pasantías.
                         </p>
                     <a data-bs-toggle="modal" data-bs-target="#elaboracionCVModal" id="btn-open-modal" href=""
