--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -107,7 +107,7 @@
     <!-- HEADER -->
     <header class="header-campus container-fluid">
         <div class="container-fluid">
-            <div class="row d-flex align-items-center">
+            <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-7">
                     <video style="cursor: pointer;" onclick="playVid()" id="myVideo" autoplay class="img-fluid">
                         <source src="../assets/videos/video-campus-enlazar.mp4">
@@ -430,7 +430,7 @@
     
     <!-- Seccion Cada vez somos mas -->
     <section class="seccion_somosMas">
-        <div class="container">
+        <div">
             <h2 class="titulo_somosMas">¡Cada vez somos más!</h2>
             <h3 class="subtitulo_somosMas">Gracias por formar parte.</h3>
         </div>
@@ -446,7 +446,7 @@
 
     <!-- Seccion Plan único con acceso a todo el Campus -->
     <section>
-        <div class="container">
+        <div>
             <h2 class="titulo__Plan">Plan único con acceso a todo el Campus</h2>
         </div>
         <div class="Contenedor__cards">
@@ -466,7 +466,7 @@
                         · Posibilidad de pasantías.
                         </p>
                     <a data-bs-toggle="modal" data-bs-target="#elaboracionCVModal" id="btn-open-modal" href=""
-                        class="button-card btn button-card__particulares align-self-end boton">QUIERO CONTRATAR</a>
+                        class="button-card btn button-card__particulares align-self-end boton" style="margin-right: 1rem; padding: 0.2rem 2.1rem;">QUIERO EMPEZAR</a>
                 </div>
             </div>
             <div class="container-card_planAnual mb-5 efecto">
@@ -481,7 +481,7 @@
                         Obtendrá el acceso a todo el Campus con el plan Enlazar Plus. 
                         </p>
                     <a data-bs-toggle="modal" data-bs-target="#elaboracionCVModal" id="btn-open-modal" href=""
-                        class="button-card btn button-card__particulares align-self-end boton" style="padding: 0.2rem 2.1rem;">QUIERO REGALAR</a>
+                        class="button-card btn button-card__particulares align-self-end boton" style="margin-right: 1rem; padding: 0.2rem 2.1rem;">QUIERO REGALAR</a>
                 </div>
             </div>
         </div>
@@ -684,7 +684,9 @@
                             src="../assets/images/curso-phyton.webp"
                             alt="Python: fundamentos & desarrollo"></div>
                     <div class="modal-body__text">
-                        <p>Python Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam similique fuga sint laboriosam assumenda cumque nemo rerum libero iusto sunt dolor quod quidem enim, sequi, corporis nulla autem dolore? Voluptatem?</p>
+                        <p>Python es un lenguaje de programación fácil de aprender, de muy alto nivel, con una sintaxis muy sencilla, gratuito, multiplataforma y muy poderoso. Es uno de los más utilizados en el mundo, y se emplea principalmente en: inteligencia artificial Big Data, ciencia de datos, automatización de procesos, desarrollo web, entre otros.
+                            En este curso aprenderás a programar desde cero con Python e instalaremos todo lo necesario para comenzar. Veremos todos los tipos de datos básicos y estructuras de datos disponibles en Python. Crearemos bucles y condicionales. Aprenderás a utilizar todos los conceptos de Programación Orientada a Objetos ¡y mucho más!
+                            También, realizaremos ejercicios en cada uno de los módulos para que puedas consolidar lo aprendido y construiremos un proyecto para demostrar tus conocimientos y sumar a tu portfolio.</p>
                     </div>
                 </div>
                 <div class="modal-footer justify-content-end">
