--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -108,13 +108,13 @@
     <header class="header-campus container-fluid">
         <div class="container-fluid">
             <div class="row d-flex align-items-center justify-content-center">
-                <div class="col-7">
+                <div class="col-12 col-md-7">
                     <video style="cursor: pointer;" onclick="playVid()" id="myVideo" autoplay class="img-fluid">
-                        <source src="../assets/videos/video-campus-enlazar-final.mp4">
+                        <source src="../assets/videos/video-campus-enlazar-final.mp4" srcset="../assets/videos/video-campus-enlazar-final-mobile.mp4 3x, ../assets/videos/video-campus-enlazar-final.mp4 1x">
                     </video>
                     <!-- <img class="img-fluid" src="../assets/images/prueba-pc-campus.png" alt="pc"> -->
                 </div>
-                <div class="col-4 d-flex flex-column align-items-start campus-texto">
+                <div class="col-12 col-md-4 d-flex flex-column  align-items-start campus-texto">
                     <p class="parrafo-camino"> <span> Todo largo camino comienza por el primer paso.</span> Hacete
                         miembro y empezá hoy a prepararte para tu
                         futuro.</p>
@@ -435,7 +435,7 @@
             <h3 class="subtitulo_somosMas">Gracias por formar parte.</h3>
         </div>
         <div class="gifSomosMas">
-            <img class="contador_somosMas" src="../assets/images/gif-datos (2).gif" alt="Contador">
+            <img class="contador_somosMas" src="../assets/images/gif-datos (2).gif"  alt="Contador">
 
         </div>
         <div>
@@ -635,7 +635,7 @@
                             src="../assets/images/curso-community-management.webp" alt="Community management"></div>
                     <div class="modal-body__text">
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores tempore atque vel explicabo eveniet aspernatur dicta, sequi voluptatum veritatis! Nobis?
+                            El community manager se encarga de construir y gestionar comunidades en redes sociales. En este curso vamos a presentar y profundizar las nociones básicas del trabajo de un CM. Veremos cómo surgió esta disciplina, quién es un CM y qué hace, qué importancia tiene un community manager hoy, y cómo fue creciendo y tomando relevancia su rol en la actualidad. Te brindaremos los conocimientos y herramientas necesarias para gestionar una comunidad con éxito y de manera responsable, creativa y eficiente. Si te interesa dar un paso más en tu emprendimiento, dedicarte a las redes, complementar con tu carrera, o simplemente por gusto o hobby, este curso es para vos.
                         </p>
                     </div>
                 </div>
@@ -710,7 +710,9 @@
                             src="../assets/images/curso-programacion-html-css.webp"
                             alt="Programación Web con HTML & CSS"></div>
                     <div class="modal-body__text">
-                        <p>HTML y CSS Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam similique fuga sint laboriosam assumenda cumque nemo rerum libero iusto sunt dolor quod quidem enim, sequi, corporis nulla autem dolore? Voluptatem?</p>
+                        <p>En este curso te enseñaremos a crear tu sitio web partiendo de una idea plasmada en papel (prototipo), trabajando con HTML y CSS, y brindándote todas las herramientas para optimizarlo al máximo.
+                            Estas tecnologías (ya que no pueden considerarse lenguajes de programación) intervienen prácticamente en todo desarrollo, grande o pequeño. Se encargan de dotar de una estructura y presentación agradables a aquello que ve el usuario en una página web.
+                            La diferencia crucial entre los dos, es que el HTML se utiliza para la creación de las páginas web y el CSS se utiliza para controlar el estilo y el diseño de las páginas web.</p>
                     </div>
                 </div>
                 <div class="modal-footer justify-content-end">
