--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -435,7 +435,8 @@
             <h3 class="subtitulo_somosMas">Gracias por formar parte.</h3>
         </div>
         <div class="gifSomosMas">
-            <img class="contador_somosMas" src="../assets/images/gif-datos (2).gif"  alt="Contador">
+            <img class="contador_somosMas" src="../assets/images/gif-datos(2).gif" srcset="../assets/images/gif-datos-mobile.gif 567w, ../assets/images/gif-datos(2).gif"  alt="Contador">
+
 
         </div>
         <div>
