--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -111,7 +111,7 @@
                 <div class="col-12 col-md-7">
                     <video style="cursor: pointer;" onclick="playVid()" id="myVideo" autoplay class="img-fluid">
                         <source src="../assets/videos/video-campus-enlazar-final.mp4"
-                            srcset="../assets/videos/video-campus-enlazar-final-mobile.mp4 3x, ../assets/videos/video-campus-enlazar-final.mp4 1x">
+                            srcset="../assets/videos/video-campus-enlazar-final-mobile.mp4 2x, ../assets/videos/video-campus-enlazar-final.mp4 1x">
                     </video>
                     <!-- <img class="img-fluid" src="../assets/images/prueba-pc-campus.png" alt="pc"> -->
                 </div>
@@ -143,7 +143,7 @@
 
     <!-- Seccion de CARDS de cursos y capacitaciones -->
     <section class="section-cards__container container-fluid">
-        <h3 class="text-center fw-bold mb-5">Todo lo que vas a encontrar:</h2>
+        <h3 class="text-center fw-bold mb-5 titulo-cards-mobile">Todo lo que vas a encontrar:</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
