--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -840,6 +840,10 @@
         var swiper = new Swiper(".mySwiper", {
             breakpoints: {
                 // when window width is >= 320px
+                100:{
+                    slidesPerView: 1,
+                    spaceBetween: 20   
+                },
                 320: {
                     slidesPerView: 1,
                     spaceBetween: 20
