cambio video y mas

--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -110,8 +110,8 @@
             <div class="row d-flex align-items-center justify-content-center">
                 <div class="col-12 col-md-7">
                     <video style="cursor: pointer;" onclick="playVid()" id="myVideo" autoplay class="img-fluid">
-                        <source src="../assets/videos/video-campus-enlazar-final.mp4"
-                            srcset="../assets/videos/video-campus-enlazar-final-mobile.mp4 2x, ../assets/videos/video-campus-enlazar-final.mp4 1x">
+                        <source src="../assets/videos/video-campus-enlazar-final (1).mp4"
+                            srcset="../assets/videos/video-campus-enlazar-final-mobile (1).mp4 2x, ../assets/videos/video-campus-enlazar-final (1).mp4 1x">
                     </video>
                     <!-- <img class="img-fluid" src="../assets/images/prueba-pc-campus.png" alt="pc"> -->
                 </div>
@@ -426,7 +426,8 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-            <p class="text-center fw-bold pt-5">Actualizamos el contenido y brindamos más cursos cada año.</p>
+            <p class="text-center fw-bold pt-5 margen subtituloActualizamos">Actualizamos el contenido y</p>
+            <p class="text-center fw-bold subtituloActualizamos">brindamos más cursos cada año.</p>
     </section>
 
     <!-- Seccion Cada vez somos mas -->
@@ -454,7 +455,7 @@
             <h2 class="titulo__Plan">Plan único con acceso a todo el Campus</h2>
         </div>
         <div class="Contenedor__cards">
-            <div class="container-card_planAnual mb-5 efecto">
+            <div class="container-card_planAnual mb-55 efecto">
                 <div class="card__containerImage">
                     <img class="card__image img__plan-anual" src="../assets/images/plan-anual.png" alt="Plan anual">
 
@@ -474,7 +475,7 @@
                         style="margin-right: 1rem; padding: 0.2rem 2.1rem;">QUIERO EMPEZAR</a>
                 </div>
             </div>
-            <div class="container-card_planAnual mb-5 efecto">
+            <div class="container-card_planAnual mb-55 efecto">
                 <div class="card__containerImage_amigo">
                     <img class="card__image_amigo" src="../assets/images/regalo-amigo.png" alt="Plan anual">
                 </div class="d-flex flex-wrap ">
