--- a/pages/comunidad.html
+++ b/pages/comunidad.html
@@ -67,7 +67,7 @@
                         <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item py-3">
-                        <a class="nav-link" href="cursos-talleres.html">Cursos & Talleres</a>
+                        <a class="nav-link" href="cursos-capacitaciones.html">Cursos & Capacitaciones</a>
                     </li>
                     <li class="nav-item py-3 active-navbar-custom">
                         <a class="nav-link active" href="comunidad.html">Comunidad</a>
@@ -216,7 +216,7 @@
             </div>
             <div class="footer-middle">
                 <ul class="footer-middle__list">
-                    <li><a href="cursos-talleres.html">Cursos & Talleres</a></li>
+                    <li><a href="cursos-capacitaciones.html">Cursos & Capacitaciones</a></li>
                 </ul>
             </div>
             <div class="footer-right">
