--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -65,7 +65,7 @@
                         <a class="nav-link active" href="#">Servicios</a>
                     </li>
                     <li class="nav-item py-3">
-                        <a class="nav-link" href="cursos-talleres.html">Cursos & Talleres</a>
+                        <a class="nav-link" href="cursos-capacitaciones.html">Cursos & Capacitaciones</a>
                     </li>
                     <li class="nav-item py-3 active-navbar-custom">
                         <a class="nav-link" href="comunidad.html">Comunidad</a>
@@ -235,7 +235,7 @@
             </div>
             <div class="footer-middle">
                 <ul class="footer-middle__list">
-                    <li><a href="cursos-talleres.html">Cursos & Talleres</a></li>
+                    <li><a href="cursos-capacitaciones.html">Cursos & Capacitaciones</a></li>
                 </ul>
             </div>
             <div class="footer-right">
