linkeando nueva seccion

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a class="nav-link" href="pages/servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item py-3">
-                        <a class="nav-link" href="pages/cursos-talleres.html">Cursos & Talleres</a>
+                        <a class="nav-link" href="pages/cursos-capacitaciones.html">Cursos & Capacitaciones</a>
                     </li>
                     <li class="nav-item py-3 active-navbar-custom">
                         <a class="nav-link" href="pages/comunidad.html">Comunidad</a>
@@ -727,7 +727,7 @@
             </div>
             <div class="footer-middle">
                 <ul class="footer-middle__list">
-                    <li><a href="pages/cursos-talleres.html">Cursos & Talleres</a></li>
+                    <li><a href="pages/cursos-capacitaciones.html">Cursos & Capacitaciones</a></li>
                 </ul>
             </div>
             <div class="footer-right">
