--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -65,7 +65,7 @@
                         <a class="nav-link" href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item py-3 active-navbar-custom">
-                        <a class="nav-link active" href="cursos-talleres.html">Cursos & Capacitaciones</a>
+                        <a class="nav-link active" href="cursos-capacitaciones.html">Cursos & Capacitaciones</a>
                     </li>
                     <li class="nav-item py-3">
                         <a class="nav-link" href="comunidad.html">Comunidad</a>
@@ -129,8 +129,8 @@
                     <p class="parrafo-proba">
                         ¡Probá la primera clase gratis!
                     </p>
-                    <a data-bs-toggle="modal" data-bs-target="#exampleModal" id="btn-open-modal"
-                        class="button-card btn campus-button">Ingresar al campus</a>
+                    <a id="btn-open-modal"
+                        class="button-card btn campus-button" href="Campus.html">Ingresar al campus</a>
                 </div>
             </div>
         </div>
@@ -620,7 +620,7 @@
             </div>
             <div class="footer-middle">
                 <ul class="footer-middle__list">
-                    <li><a href="cursos-talleres.html">Cursos & Capacitaciones</a></li>
+                    <li><a href="cursos-capacitaciones.html">Cursos & Capacitaciones</a></li>
                 </ul>
             </div>
             <div class="footer-right">
