--- a/pages/cursos-capacitaciones.html
+++ b/pages/cursos-capacitaciones.html
@@ -129,8 +129,7 @@
                     <p class="parrafo-proba">
                         ¡Probá la primera clase gratis!
                     </p>
-                    <a id="btn-open-modal"
-                        class="button-card btn campus-button" href="Campus.html">Ingresar al campus</a>
+                    <a class="button-card btn campus-button" href="contador.html">Ingresar al campus</a>
                 </div>
             </div>
         </div>
