--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                                 src="assets/images/logo-telegram.svg" alt="Logo Telegram" width="20"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/company/enlazar"
-                            target="_blank"><img class="nav-link__instagram-linkedin"
-                                src="assets/images/logo-linkedin.svg" alt="Logo Linkedin" width="20"></a>
+                        <a class="nav-link" href="https://www.linkedin.com/company/enlazar" target="_blank"><img
+                                class="nav-link__instagram-linkedin" src="assets/images/logo-linkedin.svg"
+                                alt="Logo Linkedin" width="20"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.facebook.com/enlazar.ok/" target="_blank"><img
@@ -104,6 +104,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://twitter.com/Enlazar_ok" target="_blank"><img
                                 src="assets/images/logo-twitter.svg" alt="Logo Twitter" width="20"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.tiktok.com/@enlazar.ok" target="_blank"><img class="nav-link__instagram-linkedin"
+                            src="assets/images/logo-tiktok.svg" alt="Logo Tiktok" width="20"></a>
                     </li>
                 </ul>
             </div>
@@ -733,19 +737,21 @@
             <div class="footer-right">
                 <ul class="footer-right__list">
                     <li>Descubrí nuestra comunidad</li>
-                    <li><a href="https://www.instagram.com/enlazar.ok/" target="_blank"><img
-                                class="instagram-logo" src="assets/images/logo-instagram.svg" alt="Logo instagram"></a>
+                    <li><a href="https://www.instagram.com/enlazar.ok/" target="_blank"><img class="instagram-logo"
+                                src="assets/images/logo-instagram.svg" alt="Logo instagram"></a>
                     </li>
                     <li><a href="https://t.me/joinchat/e8dtvJ5XB2k1MGIx" target="_blank"><img class="telegram-logo"
                                 src="assets/images/logo-telegram.svg" alt="Logo telegram"></a></li>
-                    <li><a href="https://www.linkedin.com/company/enlazar" target="_blank"><img
-                                class="telegram-logo" src="assets/images/logo-linkedin.svg" alt="Logo Linkedin"></a>
+                    <li><a href="https://www.linkedin.com/company/enlazar" target="_blank"><img class="telegram-logo"
+                                src="assets/images/logo-linkedin.svg" alt="Logo Linkedin"></a>
                     </li>
-                    <li><a href="https://www.facebook.com/enlazar.ok/" target="_blank"><img
-                                class="telegram-logo" src="assets/images/logo-facebook.svg" alt="Logo Facebook"></a>
+                    <li><a href="https://www.facebook.com/enlazar.ok/" target="_blank"><img class="telegram-logo"
+                                src="assets/images/logo-facebook.svg" alt="Logo Facebook"></a>
                     </li>
                     <li><a href="https://twitter.com/Enlazar_ok" target="_blank"><img class="twitter-logo"
                                 src="assets/images/logo-twitter.svg" alt="Logo twitter"></a></li>
+                                <li><a href="https://www.tiktok.com/@enlazar.ok" target="_blank"><img class="twitter-logo"
+                                    src="assets/images/logo-tiktok.svg" alt="Logo Tiktok"></a></li>
                 </ul>
             </div>
             <div class="footer-logo-mobile d-none">
