--- a/pages/contador.html
+++ b/pages/contador.html
@@ -85,13 +85,17 @@
                         <a class="nav-link" href="https://twitter.com/Enlazar_ok" target="_blank"><img
                                 src="../assets/images/logo-twitter.svg" alt="Logo Twitter" width="20"></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.tiktok.com/@enlazar.ok" target="_blank"><img class="nav-link__instagram-linkedin"
+                            src="../assets/images/logo-tiktok.svg" alt="Logo Tiktok" width="20"></a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <section class="countdown-section">
-        <h1 class="title-countdown">Nuestro campus estará disponible en:</h1>
-        <div class="countdown" id="countdown">
+        <h1 class="title-countdown">Nuestro campus estará disponible proximamente</h1>
+<!--         <div class="countdown" id="countdown">
             <div class="time">
                 <h2 id="days">00</h2>
                 <small>Días</small>
@@ -111,11 +115,11 @@
                 <h2 id="seconds">00</h2>
                 <small>Segundos</small>
             </div>
-        </div>
+        </div> -->
     </section>
 
 
-    <script src="../js/contador.js"></script>
+    <!-- <script src="../js/contador.js"></script> -->
     <script src="../js/bootstrap.bundle.js"></script>
 </body>
 
