--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -99,6 +99,10 @@
                         <a class="nav-link" href="https://twitter.com/Enlazar_ok" target="_blank"><img
                                 src="../assets/images/logo-twitter.svg" alt="Logo Twitter" width="20"></a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.tiktok.com/@enlazar.ok" target="_blank"><img class="nav-link__instagram-linkedin"
+                            src="../assets/images/logo-tiktok.svg" alt="Logo Tiktok" width="20"></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -254,6 +258,8 @@
                     </li>
                     <li><a href="https://twitter.com/Enlazar_ok" target="_blank"><img class="twitter-logo"
                                 src="../assets/images/logo-twitter.svg" alt="Logo twitter"></a></li>
+                                <li><a href="https://www.tiktok.com/@enlazar.ok" target="_blank"><img class="twitter-logo"
+                                    src="../assets/images/logo-tiktok.svg" alt="Logo Tiktok"></a></li>
                 </ul>
             </div>
             <div class="footer-logo-mobile d-none">
