--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
         content="Recursos humanos, psicologia, psicología laboral, consultora enlazar, enlazar, consultoría, relaciones laborales, trabajo, educación, capital humano, talento, cursos, cursos online, capacitaciones, webinars gratuitos, curriculum, revisión de cv, empleabilidad, orientación vocacional, calidad de trabajo, comunidad, encontrar empleo, desarrollo profesional, reclutamiento, selección de personal, recruiting, coaching, acompañamiento personalizado, asesorías, recursos gratis, consultas, cosching, experiencia laboral,">
     <title>Inicio - Consultora Enlazar</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FDTGJRDSN"></script>
+    <script>
+      {
+        window.location.replace("https://www.consultoraenlazar.xyz");
+      }
+    </script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4FDTGJRDSN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-4FDTGJRDSN');
-    </script>
+    </script> -->
     <!-- FAVICON -->
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
